<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support">Написать в поддержку</string>
    <string name="support_email">Quilikasa@ya.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="eula">Пользовательское соглашение</string>
    <string name="eula_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_empty_result">Ничего не нашлось</string>
    <string name="search_failure">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>

    <string name="text_time_total_descr">Длительность</string>
    <string name="text_album_bottom_descr">Альбом</string>
    <string name="text_year_descr">Год</string>
    <string name="text_genre_descr">Жанр</string>
    <string name="text_country_descr">Страна</string>
</resources>