<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:layout_marginBottom="@dimen/top_bar_margin_bottom">

            <ImageView
                android:id="@+id/btn_back"
                style="@style/TopBarIconBack" />

            <TextView
                style="@style/TopBarText"
                android:text="@string/settings" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:paddingVertical="@dimen/settings_padding_vertical">

            <TextView
                android:text="@string/dark_theme"
                style="@style/SettingsMenuText" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/settings_padding_vertical">

            <TextView
                android:text="@string/share"
                style="@style/SettingsMenuText" />

            <ImageView
                style="@style/SettingsMenuIcon"
                android:src="@drawable/ic_share"
                android:layout_marginRight="4dp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/settings_padding_vertical">

            <TextView
                android:text="@string/support"
                style="@style/SettingsMenuText" />

            <ImageView
                style="@style/SettingsMenuIcon"
                android:src="@drawable/ic_support"
                android:layout_marginRight="4dp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_eula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/settings_padding_vertical">

            <TextView
                android:text="@string/eula"
                style="@style/SettingsMenuText" />

            <ImageView
                style="@style/SettingsMenuIcon"
                android:src="@drawable/ic_arrow_forward"
                android:layout_marginRight="8dp"/>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>