<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="28dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:paddingBottom="16dp"
            android:paddingTop="14dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
Д                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:backgroundTint="@color/white"
                android:text="@string/search"
                android:textAllCaps="false"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_search"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@color/black"
                android:textColor="@color/text_black"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/btn_library"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:backgroundTint="@color/white"
                android:text="@string/library"
                android:textAllCaps="false"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_library"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@color/black"
                android:textColor="@color/text_black"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:backgroundTint="@color/white"
                android:text="@string/settings"
                android:textAllCaps="false"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_settings"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@color/black"
                android:textColor="@color/text_black"
                android:textSize="22sp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>