<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/btn_back"
                style="@style/TopBarIconBack" />

            <TextView
                style="@style/TopBarText"
                android:text="@string/search" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:paddingHorizontal="12dp"
            android:background="@drawable/edit_rounded_background">

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/search"
                android:maxLines="1"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:drawableLeft="@drawable/ic_search_16"
                android:drawableTint="?attr/colorOnSecondary"
                android:drawablePadding="8dp"
                android:textColorHint="?attr/colorOnSecondary"
                android:textColor="@color/dark_grey"
                android:textSize="16sp"
                android:fontFamily="@font/ys_display_regular"
                android:textFontWeight="400"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:visibility="gone"
                android:src="@drawable/ic_clear"
                app:tint="@color/gray"/>
        </FrameLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="148dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            tools:visibility="gone"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <LinearLayout
            android:id="@+id/placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:visibility="gone"
            android:visibility="gone"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/placeholder_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:src="@drawable/ic_search_failure"/>

            <TextView
                android:id="@+id/placeholder_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/search_failure"
                android:textSize="19sp"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="400"
                android:textColor="?attr/colorPrimary"
                android:gravity="center_horizontal"/>

            <Button
                android:id="@+id/placeholder_btn"
                android:text="@string/update"
                style="@style/ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:visibility="visible"
            android:visibility="visible"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:text="@string/search_history_title"
                android:textSize="19sp"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
                android:textColor="?attr/colorPrimary"
                android:gravity="center_horizontal"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <Button
                android:id="@+id/history_clear_btn"
                android:text="@string/search_history_clear"
                style="@style/ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>