<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/btn_back"
            style="@style/TopBarIconBack"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:src="@drawable/album"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
            app:layout_constraintTop_toBottomOf="@+id/btn_back" />

        <TextView
            android:id="@+id/text_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            tools:text="Yesterday (Remastered 2009)"
            android:textColor="?attr/colorPrimary"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
            app:layout_constraintTop_toBottomOf="@+id/img_album" />

        <TextView
            android:id="@+id/text_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="The Beatles"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
            app:layout_constraintTop_toBottomOf="@+id/text_album" />

        <ImageView
            android:id="@+id/img_add"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/button_add"
            android:layout_marginTop="38dp"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintEnd_toStartOf="@+id/img_play"
            app:layout_constraintTop_toBottomOf="@+id/text_artist"
            app:layout_constraintBottom_toBottomOf="@+id/img_play"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />

        <ImageView
            android:id="@+id/img_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:src="@drawable/button_play"
            app:tint="?attr/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/img_add"
            app:layout_constraintEnd_toStartOf="@+id/img_fav"
            app:layout_constraintTop_toBottomOf="@+id/text_artist" />

        <ImageView
            android:id="@+id/img_fav"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/button_fav"
            android:layout_marginTop="38dp"
            app:layout_constraintStart_toEndOf="@+id/img_play"
            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
            app:layout_constraintTop_toBottomOf="@+id/text_artist"
            app:layout_constraintBottom_toBottomOf="@+id/img_play"/>

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0:30"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
            app:layout_constraintTop_toBottomOf="@+id/img_play" />

        <TextView
            android:id="@+id/text_time_total_descr"
            style="@style/PlayerTrackDescriptionTitle"
            android:text="@string/text_time_total_descr"
            android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_time_total"
            app:layout_constraintTop_toBottomOf="@+id/text_time" />

        <TextView
            android:id="@+id/text_time_total"
            style="@style/PlayerTrackDescriptionText"
            tools:text="5:35"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@+id/text_time_total_descr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_time" />

        <TextView
            android:id="@+id/text_album_bottom_descr"
            style="@style/PlayerTrackDescriptionTitle"
            android:text="@string/text_album_bottom_descr"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_album_bottom"
            app:layout_constraintTop_toBottomOf="@+id/text_time_total_descr" />

        <TextView
            android:id="@+id/text_album_bottom"
            style="@style/PlayerTrackDescriptionText"
            tools:text="Yesterday (Remastered 2009)"
            app:layout_constraintStart_toEndOf="@+id/text_album_bottom_descr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_time_total_descr" />

        <TextView
            android:id="@+id/text_year_descr"
            style="@style/PlayerTrackDescriptionTitle"
            android:text="@string/text_year_descr"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_year"
            app:layout_constraintTop_toBottomOf="@+id/text_album_bottom_descr" />

        <TextView
            android:id="@+id/text_year"
            style="@style/PlayerTrackDescriptionText"
            tools:text="1965"
            app:layout_constraintStart_toEndOf="@+id/text_year_descr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_album_bottom_descr" />

        <TextView
            android:id="@+id/text_genre_descr"
            style="@style/PlayerTrackDescriptionTitle"
            android:text="@string/text_genre_descr"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_genre"
            app:layout_constraintTop_toBottomOf="@+id/text_year_descr" />

        <TextView
            android:id="@+id/text_genre"
            style="@style/PlayerTrackDescriptionText"
            tools:text="Rock"
            app:layout_constraintStart_toEndOf="@+id/text_genre_descr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_year_descr" />

        <TextView
            android:id="@+id/text_country_descr"
            style="@style/PlayerTrackDescriptionTitle"
            android:text="@string/text_country_descr"
            android:layout_marginBottom="28dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_country"
            app:layout_constraintTop_toBottomOf="@+id/text_genre_descr" />

        <TextView
            android:id="@+id/text_country"
            style="@style/PlayerTrackDescriptionText"
            tools:text="Великобритания"
            android:layout_marginBottom="28dp"
            app:layout_constraintStart_toEndOf="@+id/text_country_descr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_genre_descr" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>